--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -82,9 +82,9 @@
 <section id="contact" class="contact section">
     <h2 class="section-title">Contact</h2>
     <div class="contact-links">
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+        <a href="https://github.com/ismail-81" target="_blank">GitHub</a>
         <a href="https://instagram.com/ismail._.gheewala" target="_blank">Instagram</a>
-        <a href="https://wa.me/91XXXXXXXXXX" target="_blank">WhatsApp</a>
+        <a href="https://wa.me/919574795108" target="_blank">WhatsApp</a>
     </div>
 </section>
 
@@ -134,5 +134,6 @@
             }
         });
     });
+
 
 </script>
